--- a/src/NavBar/NavBar.module.scss
+++ b/src/NavBar/NavBar.module.scss
@@ -1,47 +1,31 @@
 @import 'src/common/styles/varabiles';
+@import "src/common/styles/mixin";
+
 .nav {
-  //position: fixed;
-  //right: -100px;
-  right: 50px;
-  //top: -100px;
-  //z-index: 100;
-  //width: 200px;
-  //height: 200px;
-  //background-color: rgba(31,31,32,.9);
-  border-radius: 15% 85%;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-  border: none;
-  opacity: 0.5;
-  outline: none !important;
-
-
-  box-sizing: border-box;
-  //background-color: $bgFirstColor;
-  color: $secondTextColor;
-  //border: 1px solid darkred;
-  //width: 300px;
-  //display: flex;
-  //justify-content: space-between;
-  //& overlay {
-  //  box-shadow: 0 0 0 120vw rgb(31 31 32), 0 0 0 120vh rgb(31 31 32);
-  //  opacity: 0.9 /*border-radius: 0;*/;
   .listMenu {
     padding: 0 15px;
     margin: 0 25px 10px 0;
-    border: 1px solid $secondTextColor;
     width: 300px;
     display: flex;
     justify-content: space-between;
-    @media screen and (max-width: 375px){
+    @media screen and (max-width: 375px) {
       margin: 0 45px 10px 0;
     }
+
     .menuItem {
       list-style-type: none;
-    & a {
-      color: $secondTextColor;
+      @include text($fontFamilyJosefin, 300, 18px, 1.4);
+      cursor: pointer;
+      font-weight: bold;
+      .active {
+        color: $secondTextColor;
+      }
+      &:hover {
+        color: $secondTextColor;
+      }
+
     }
-    }
+
   }
 }
 
