--- a/src/Skills/Skills.module.scss
+++ b/src/Skills/Skills.module.scss
@@ -1,8 +1,6 @@
 @import "src/common/styles/varabiles";
 @import "src/common/styles/mixin";
 .skillBlock {
-    //visibility: visible;
-    //animation-name: fadeInUp;
     min-height: 100vh;
     background-color: $bgSecondColor;
     color: $textColor;
@@ -27,14 +25,12 @@
 }
 
 .skill{
-    //flex: 0 0 33.333333%;
-    min-width: 100%;
+    min-width: 10%;
     max-width: 33.333333%;
     margin: 30px 20px 0 20px;
     .icon{
         visibility: visible;
         animation-delay: 0.2s;
-        animation-name: fadeInUp;
         .iconBox{
             color: #4e93e6;
             height: 80px;
@@ -65,15 +61,9 @@
         }
         .aboutSkill{
             text-align: center;
-            & h3 {
-                transition: 0.4ms;
-                margin: 0 0 15px;
-                font-size: 16px;
-            }
+            min-width: 80px;
+            @include text($fontFamilyPoppins, 700, inherit, 1);
 
-            .inconeDesc {
-                box-sizing: border-box;
-            }
         }
     }
 }
