--- a/src/Contacts/Contacts.module.scss
+++ b/src/Contacts/Contacts.module.scss
@@ -5,7 +5,7 @@
   background-color: $bgFirstColor;
   padding: 5% 0 10% 0;
   border: 1px solid;
-  max-height: 60vh;
+  min-height: 60vh;
   @media screen and (max-width: 380px) {
     padding: 0 0 10% 0;
     min-height: 63vh;
@@ -16,8 +16,19 @@
     min-height: 68vh;
     width: 80%;
     margin: 0 auto;
+    padding: 10px 0 0 0;
     @include flexFirstStyle(flex, column, wrap, center, center);
-
+    .alert{
+      color: white;
+      @include text($fontFamilyPoppins, 700, inherit, 3);
+      width: 100%;
+      height: 150px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px solid;
+      box-shadow: 20px 20px 10px;
+    }
     .inputBlock {
       width: 70%;
       border: 1px solid;
