--- a/src/common/components/button/Button.module.scss
+++ b/src/common/components/button/Button.module.scss
@@ -14,7 +14,7 @@
   margin: 15px auto;
   z-index: 1;
   text-align: center;
-  width: 100%;
+  min-width: 20%;
   border: none;
   position: relative;
   cursor: pointer;
@@ -34,5 +34,15 @@
   &:hover:after {
     height: 130%;
     width: 100%;
+  }
+}
+.disabled{
+  color: gray;
+  cursor: auto;
+  //width: 150px;
+  &::after {
+    height: 130%;
+    width: 100%;
+    color: gray;
   }
 }
