--- a/src/common/Footer/Footer.module.scss
+++ b/src/common/Footer/Footer.module.scss
@@ -10,39 +10,43 @@
   margin: 0 auto;
   padding: 0 0 0 0;
   color: $textColor;
+
   & h3 {
     @include text($fontFamilyJosefin, 500, 12px, 1px);
   }
+
   & span {
     @include text($fontFamilyJosefin, 500, 12px, 1px);
   }
+
   .containerSqu {
     display: flex;
     justify-content: center;
 
     .contactMe {
       position: relative;
+      .squares {
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        left: 0;
+        right: 0;
+        & :hover {
+          width: 200px
+        }
+      }
 
-    .squares {
-      width: 40px;
-      height: 40px;
-      //background-color: #bebbbb;
-      position: absolute;
-      left: 0;
-      right: 0;
-
-      :hover{
-        cursor: pointer;
+      .square {
+        width: 30px;
+        height: 30px;
+        margin: 0 5px;
+        & :hover {
+          width: 50px;
+          height: 50px;
+        }
       }
     }
-
-    .square {
-      width: 30px;
-      height: 30px;
-      margin: 0 5px;
-      position: relative;
-    }
-  }}
+  }
 }
 
 
