--- a/src/Contacts/Contacts.module.scss
+++ b/src/Contacts/Contacts.module.scss
@@ -25,10 +25,15 @@
       width: 100%;
       height: 150px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
+      text-align: center;
       border: 1px solid;
       box-shadow: 20px 20px 10px;
+      @media screen and (max-width: 450px) {
+        line-height: 1.2;
+      }
     }
 
     .error {
@@ -46,9 +51,11 @@
       .input {
         width: 100%;
         @include flexFirstStyle(flex, column, nowrap, space-around, flex-start);
+
         .errors {
           border: 1px solid red;
         }
+
         & input {
           margin: 6px 30px 6px 5px;
           height: 24px;
